tests/snapshots/run_wpt_conformance__onnx_prelu_int64_2D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "prelu.https.any.js",
    "prelu int64 2D constant tensors",
    "onnx",
    "PASS",
)
