tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float16_0D_constant_tensor_with_int8_0D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float16 0D constant tensor with int8 0D zeroPoint",
    "onnx",
    "PASS",
)
