tests/snapshots/run_wpt_conformance__onnx_quantizeLinear_float16_1D_tensor_with_uint8_1D_zeroPoint.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "quantizeLinear.https.any.js",
    "quantizeLinear float16 1D tensor with uint8 1D zeroPoint",
    "onnx",
    "PASS",
)
